--- a/vite-project/vercel.json
+++ b/vite-project/vercel.json
@@ -1,4 +1,4 @@
 {
-    "routes": [{ "src": "/(.*)", "dest": "/index.html" }]
+    "rewrite": [{ "source": "/(.*)", "destination": "/index.html" }]
   }
   
